--- a/02_layout.html
+++ b/02_layout.html
@@ -15,13 +15,13 @@
       <nav class="gnb">
         <h2 class="blind">메뉴</h2>
         <ul class="menu_list">
-          <li class="menu"><a href="http://ft-dev.pages.hivelab.co.kr/ojt_2023_1th/leemiyeon/1%EC%A3%BC%EC%B0%A8/01_layout.html" class="link">STEP 01</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/01_layout.html" class="link">STEP 01</a></li>
           <li class="menu is_active"><a href="#" class="link">STEP 02</a></li>
-          <li class="menu"><a href="http://ft-dev.pages.hivelab.co.kr/ojt_2023_1th/leemiyeon/1%EC%A3%BC%EC%B0%A8/03_layout.html" class="link">STEP 03</a></li>
-          <li class="menu"><a href="http://ft-dev.pages.hivelab.co.kr/ojt_2023_1th/leemiyeon/1%EC%A3%BC%EC%B0%A8/04_layout.html" class="link">STEP 04</a></li>
-          <li class="menu"><a href="http://ft-dev.pages.hivelab.co.kr/ojt_2023_1th/leemiyeon/1%EC%A3%BC%EC%B0%A8/05_layout.html" class="link">STEP 05</a></li>
-          <li class="menu"><a href="http://ft-dev.pages.hivelab.co.kr/ojt_2023_1th/leemiyeon/1%EC%A3%BC%EC%B0%A8/06_layout.html" class="link">STEP 06</a></li>
-          <li class="menu"><a href="http://ft-dev.pages.hivelab.co.kr/ojt_2023_1th/leemiyeon/1%EC%A3%BC%EC%B0%A8/07_layout.html" class="link">STEP 07</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/03_layout.html" class="link">STEP 03</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/04_layout.html" class="link">STEP 04</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/05_layout.html" class="link">STEP 05</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/06_layout.html" class="link">STEP 06</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/07_layout.html" class="link">STEP 07</a></li>
         </ul>
       </nav>
     </div>
