파일 경로 수정

--- a/02_layout.html
+++ b/02_layout.html
@@ -15,7 +15,7 @@
       <nav class="gnb">
         <h2 class="blind">메뉴</h2>
         <ul class="menu_list">
-          <li class="menu"><a href="https://dreamcode0331.github.io/layout/01_layout.html" class="link">STEP 01</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/index.html" class="link">STEP 01</a></li>
           <li class="menu is_active"><a href="#" class="link">STEP 02</a></li>
           <li class="menu"><a href="https://dreamcode0331.github.io/layout/03_layout.html" class="link">STEP 03</a></li>
           <li class="menu"><a href="https://dreamcode0331.github.io/layout/04_layout.html" class="link">STEP 04</a></li>
