--- a/index.html
+++ b/index.html
@@ -316,6 +316,21 @@
       </div>
     </section>
   </div>
+  <script src="https://giscus.app/client.js"
+    data-repo="[ENTER REPO HERE]"
+    data-repo-id="[ENTER REPO ID HERE]"
+    data-category="[ENTER CATEGORY NAME HERE]"
+    data-category-id="[ENTER CATEGORY ID HERE]"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="bottom"
+    data-theme="preferred_color_scheme"
+    data-lang="ko"
+    crossorigin="anonymous"
+    async>
+  </script>
   <script>
     // input[name="rdo_01"] 클릭했을 때,
     $(".layout").hide();
