giscus 스크립트 수정 1

--- a/index.html
+++ b/index.html
@@ -317,15 +317,15 @@
     </section>
   </div>
   <script src="https://giscus.app/client.js"
-    data-repo="[ENTER REPO HERE]"
-    data-repo-id="[ENTER REPO ID HERE]"
-    data-category="[ENTER CATEGORY NAME HERE]"
-    data-category-id="[ENTER CATEGORY ID HERE]"
+    data-repo="dreamcode0331/layout"
+    data-repo-id="R_kgDOJHPWbA"
+    data-category="General"
+    data-category-id="DIC_kwDOJHPWbM4CUwD-"
     data-mapping="pathname"
     data-strict="0"
     data-reactions-enabled="1"
     data-emit-metadata="0"
-    data-input-position="bottom"
+    data-input-position="top"
     data-theme="preferred_color_scheme"
     data-lang="ko"
     crossorigin="anonymous"
