giscus 스크립트 추가

--- a/02_layout.html
+++ b/02_layout.html
@@ -414,7 +414,22 @@
         </ul> 
       </div>
     </section>
-  </div>  
+  </div>
+  <script src="https://giscus.app/client.js"
+    data-repo="dreamcode0331/layout"
+    data-repo-id="R_kgDOJHPWbA"
+    data-category="General"
+    data-category-id="DIC_kwDOJHPWbM4CUwD-"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="preferred_color_scheme"
+    data-lang="ko"
+    crossorigin="anonymous"
+    async>
+  </script>
   <script>
     // input[name="rdo_01"] 클릭했을 때,
     $(".layout").hide();
