--- a/06_layout.html
+++ b/06_layout.html
@@ -269,7 +269,22 @@
         </ul> 
       </div>  
     </section>
-  </div>  
+  </div>
+  <script src="https://giscus.app/client.js"
+    data-repo="dreamcode0331/layout"
+    data-repo-id="R_kgDOJHPWbA"
+    data-category="General"
+    data-category-id="DIC_kwDOJHPWbM4CUwD-"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="preferred_color_scheme"
+    data-lang="ko"
+    crossorigin="anonymous"
+    async>
+  </script>  
   <script>
     // .rdo_box를 클릭했을 때,
     $(".box_wrap").hide();
