--- a/06_layout.html
+++ b/06_layout.html
@@ -32,6 +32,7 @@
       <h2 class="blind">1주차 Layout Step 6</h2>
       <div class="inner">
         <div class="desc">
+          <p style="padding-bottom:20px;font-size:18px;font-weight:bold;">잠깐!! Step 6 에서 작업하면서 발견된 이슈를 먼저 짚어보자.</p>
           <p>!!!! table과 grid에 여백을 부여하는 과정에서 발생되는 문제점이 있음</p>
           <div class="img_area"><img src="images/img_06.png" alt="width값이 다른 박스 레이아웃"></div>  
           <p> ➡ 서로 같은 영역을 나누어 차지하는 특성때문에 첫번째 박스에만 0으로 설정한 마진값이 빠지면서 동일한 너비값을 갖지 못하는 문제가 발생되었다.</p>
