grid layout update

--- a/grid/01_grid_layout4.html
+++ b/grid/01_grid_layout4.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Step3 - 라인기반 배치</title>
+<title>Step4 - Grid template areas</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
