--- a/grid/01_grid_layout5.html
+++ b/grid/01_grid_layout5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Step3 - 라인기반 배치</title>
+<title>Step5 - Layout using named grid lines</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
@@ -23,7 +23,7 @@
           <li class="menu"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout3.html" class="link">STEP3</a></li>
           <li class="menu"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout4.html" class="link">STEP4</a></li>
           <li class="menu is_active"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout5.html" class="link">STEP5</a></li>
-        </ul>
+         </ul>
       </nav>
     </header>
     <!-- // HEADER -->
