--- a/grid/01_grid_layout1.html
+++ b/grid/01_grid_layout1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Step1 - 그리드 레이아웃 기본 개념</title>
+<title>Step1 - Basic concepts of grid layout</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
