--- a/grid/01_grid_layout2.html
+++ b/grid/01_grid_layout2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Step2 - 다른 레이아웃과 배치 관계</title>
+<title>Step2 - Relationship of grid layout to other layout methods</title>
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
