grid layout update

--- a/grid/01_grid_layout7.html
+++ b/grid/01_grid_layout7.html
@@ -14,7 +14,7 @@
   <div class="wrap step7">
     <!-- HEADER -->
     <header class="header">
-      <h1 class="blind">Grid Layout 뿌시기</h1>
+      <h1 class="blind">Box alignment in grid layout</h1>
       <nav class="gnb">
         <h2 class="blind">메뉴</h2>
         <ul class="menu_list">
@@ -26,6 +26,7 @@
           <li class="menu"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout6.html" class="link">STEP6</a></li>
           <li class="menu is_active"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout7.html" class="link">STEP7</a></li>
           <li class="menu"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout8.html" class="link">STEP8</a></li>
+          <li class="menu"><a href="https://dreamcode0331.github.io/layout/grid/01_grid_layout9.html" class="link">STEP9</a></li>
          </ul>
       </nav>
     </header>
